Fixed metric values for equation to be correct

--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -7,7 +7,7 @@
   <body>
     <form action="/bmicalculator" method="post">
       <input type="text" name="weight" placeholder="kg">
-      <input type="text" name="height" placeholder="cm">
+      <input type="text" name="height" placeholder="m">
       <button type="submit" name="Submit">Submit</button>
     </form>
   </body>
